--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,10 @@
   border-bottom: solid;
 }
 
+.nav-item .nav-link {
+  margin: 0 15px;
+}
+
 // general style
 .navbar-lewagon {
   justify-content: space-between;
