--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,6 +3,7 @@
 @import "avatar";
 @import "banner";
 @import "button";
+@import "card_worker";
 @import "cards_incident";
 @import "footer";
 @import "form";
