--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,9 +14,14 @@
         <li class="nav-item active">
           <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
+        <li class="nav-item active">
+          <%= link_to "Réparateurs", workers_path, class: "nav-link" %>
+        </li>
+        <% if current_user.rentals.present? %>
         <li class="nav-item">
           <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
         </li>
+        <% end %>
         <li class="nav-item dropdown">
         <% if current_user.avatar.attached? %>
 
