--- a/app/views/incidents/results.html.erb
+++ b/app/views/incidents/results.html.erb
@@ -11,4 +11,11 @@
 <h5><strong>Paiement attribué:</strong></h5>
 <p> <%= @results[:final_answer][:responsable]  %></p>
 
+<h5><strong>Votre incident:</strong></h5>
+<% @resume.each do |t| %>
+> <%= Incident::TREE[t][:label]  %><br/>
+<em><strong><%= Incident::TREE[t][:next_question]  %> <br/></strong></em>
+<% end %>
+
 </div>
+
