--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -86,6 +86,16 @@
   <!-- Partie basse des tuiles responsive -->
   <div class="container incident mt-5">
     <h1>Déclarer un sinistre</h1>
+
+    <%= simple_form_for Incident.new, html:{id:"dashboard_new_incident"} do |f| %>
+      <%= f.input :answer, label: "", collection: @first_decision[:answers], label_method: lambda{ |answer| render "incident_category_card", incident_category: answer.first }, as: :radio_buttons %>
+      <%= f.submit "OK", class: "btn btn-primary" %>
+    <% end %>
+
+
+
+
+<!--
     <div class="cards">
       <div id="myBtn" class="card-incident" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
         Incendie
@@ -107,16 +117,16 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <!-- END Active PAGE -->
 
 
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal"> -->
 
   <!-- Modal content -->
-  <div class="modal-content">
+ <!--  <div class="modal-content">
     <div class="modal-header">
       <h2>Déclarer un sinistre</h2>
       <span class="close-modal">&times;</span>
@@ -127,10 +137,10 @@
       </div>
       <p>Some text in the Modal Body</p>
       <p>Some other text...</p>
-      <%= simple_form_for(@incident) do |form| %>
-        <%= form.input :category, collection: Incident::CATEGORIES, include_blank: "Select a category"  %>
-        <%= form.button :submit, "Next" %>
-      <% end %>
+      <%#= simple_form_for(@incident) do |form| %>
+        <%#= form.input :category, collection: Incident::CATEGORIES, include_blank: "Select a category"  %>
+        <%#= form.button :submit, "Next" %>
+      <%# end %>
       <div class="progress" style="height: 2px;">
         <div class="progress-bar bg-info" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
@@ -140,7 +150,7 @@
     </div>
   </div>
 
-</div>
+</div> -->
 <!-- END Modal -->
 
 <!-- Display error -->
