--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -135,3 +135,37 @@
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
+
+// form incidents
+
+#dashboard_new_incident {
+  .form-check {
+    padding: 0;
+  }
+  legend {
+    display: none;
+  }
+  input.radio_buttons {
+    display:none;
+  }
+  .incident_answer {
+    display: flex;
+    .form-check {
+      flex: 1 0 1%;
+      margin-right: 10px;
+      label {
+        width: 100%
+      }
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+
+
+
+
+
+
