--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -34,7 +34,7 @@
         DOCUMENTS
       </div>
       <div id="edl" class="product-container tabcontent bg-white">
-        ETAT des LIEUX
+        <%= render 'carousel' %>
       </div>
     </div>
 
