--- a/app/views/workers/index.html.erb
+++ b/app/views/workers/index.html.erb
@@ -3,23 +3,28 @@
 
 <div class="container-fluid">
   <ul class="">
-    <% @workers.each do |worker| %>
+    <% @workers.each_with_index do |worker, idx| %>
       <li>
-        <div class="card-worker">
-          <div class="photo">
-            <img src="https://s-media-cache-ak0.pinimg.com/236x/3b/36/ca/3b36ca3afe0fa0fd4984b9eee2e154bb.jpg">
+        <div id="worker-<%= worker.id %>" class="card-worker mt-3">
+          <div class="worker-photo">
+            <%= cl_image_tag worker.photos.first.key, crop: :thumb, width: 190, height: 280 %>
           </div>
-          <div class="description">
+          <div class="worker-description">
             <h2><%= worker.name %></h2>
             <h4>Catégorie : <%= worker.categories %></h4>
             <h3><i class="fas fa-address-card"></i> : <%= worker.address %></h3>
             <h3><i class="fas fa-envelope"></i> : <%= worker.email %></h3>
             <h3><i class="fas fa-phone"></i> : <%= worker.phone %></h3>
-            <p>Classic Peace Lily is a spathiphyllum floor plant arranged in a bamboo planter with a blue & red ribbom and butterfly pick.</p>
+            <% if worker.description && worker.description.size > 180 %>
+              <p><%= worker.description.first(180) %><span class="show">... <%= link_to "Lire la suite", "" %></span ><span class="hide"><%= worker.description.last(-180) %> <%= link_to "Lire moins", "" %></span></p>
+            <% else %>
+              <p><%= worker.description %></p>
+            <% end %>
             <button>Contacter</button>
+            <button>Voir plus</button>
+            <%= image_tag "p#{idx + 1}.jpg", alt: "alttext", class: 'avatar-bordered worker-avatar' %>
           </div>
         </div>
-        <!-- <p><strong>Descprition :</strong> <%= worker.description %></p> -->
       </li>
     <% end %>
   </ul>
