carousel, sans modale

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,3 +1,12 @@
+.carous {
+  margin : auto;
+  background-color: black;
+}
+.carous2 {
+  background-color: black;
+  border-radius: 0 0 5px 5px;
+}
+
 .upper-part {
   display: flex;
   justify-content: space-between;
