--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -1,15 +1,19 @@
+
 <% if @rental.photos %>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide carous" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <% @rental.photos[1..-1].each_with_index do  |_photo, index| %>
-        <li data-target="#carouselExampleIndicators" data-slide-to= <% index %> ></li>
+      <% @rental.photos[0..-2].each_with_index do  |_photo, index| %>
+        <li data-target="#carouselExampleIndicators" data-slide-to= <%=(index+1).to_s%> ></li>
       <% end %>
     </ol>
-    <div class="carousel-inner">
-      <% @rental.photos.each_with_index do |photo, index| %>
+    <div class=" carousel-inner">
+      <div class="carousel-item active">
+        <%= cl_image_tag  @rental.photos.first.key, class:"d-block img-fluid"%>
+      </div>
+      <% @rental.photos[1..-1].each do |photo| %>
         <div class="carousel-item">
-          <%= cl_image_tag photo.key, class:"carousel-img", height: 400, width: 800, crop: :fill    %>
+          <%= cl_image_tag  photo.key, class:"d-block img-fluid", height: 220, crop: :fill %>
         </div>
       <% end %>
     </div>
@@ -23,3 +27,19 @@
     </a>
   </div>
 <% end %>
+
+<!-- id="myBtn_c" -->
+<!-- The Modal Carousel-->
+<!-- <div id="myModal_c" class="modal_c"> -->
+  <!-- Modal content -->
+ <!--  <div class="modal-content_c">
+
+    <div class="modal-header_c">
+      <span class="close-modal_c">&times;</span>
+    </div>
+    <div class="modal-body">
+
+    </div>
+  </div>
+</div> -->
+<!-- END Modal Carousel -->
