--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,6 +14,11 @@
   margin: 0 15px;
 }
 
+// hover on avatar
+.nav-item img:hover {
+  cursor: pointer;
+}
+
 // general style
 .navbar-lewagon {
   justify-content: space-between;
