--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -11,6 +11,18 @@
   }
 }
 
+.worker-favorite {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 28px;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+
+  .fas.fa-heart {
+    color: red;
+  }
+}
+
 .worker-photo {
   padding: 30px;
   width: 40%;
