--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -113,6 +113,12 @@
   // padding: 0px;
 }
 
+//container des pdf
+
+.fa-file-pdf {
+  color: red;
+}
+
 // Container des cards incidents
 
 .incident {
