--- a/app/assets/stylesheets/components/_card_worker.scss
+++ b/app/assets/stylesheets/components/_card_worker.scss
@@ -15,10 +15,17 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  font-size: 28px;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
 
+  .btn {
+    padding: 0;
+    margin: 0;
+  }
+  .far.fa-heart {
+    font-size: 28px;
+  }
   .fas.fa-heart {
+    font-size: 28px;
     color: red;
   }
 }
