add slideshow behind carousel

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,6 @@
-.carous {
-  margin : auto;
-  background-color: black;
+.carousel-wrapper {
+    width: 65%;
+    margin: 0 auto;
 }
 .carous2 {
   background-color: black;
