--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -73,7 +73,8 @@
 
                   <p class="m-0 p-1"><%= doc.name %></p>
                 </button>
-               <%= link_to "download" , ( cl_image_tag"#{doc.file.key}" , :flag => "attachment") %>
+               <%#= link_to "download" , ( cl_image_tag"#{doc.file.key}" , :flag => "attachment") %>
+               <%= link_to("download", cl_image_path(doc.file.key)) %>
           <% end %>
           </div>
 
