--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,5 +1,5 @@
 .carousel-wrapper {
-    width: 65%;
+    width: 73%;
     margin: 0 auto;
 }
 .carous2 {
@@ -19,6 +19,7 @@
   width: 55%;
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    background-color: white;
 }
 
 .tab {
