correction home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -116,7 +116,7 @@
 
 <!-- Encart témoignages clients -->
 <div class="container mt-5">
-  <div class="title text-center mb-5">
+  <div class="customer-title text-center mb-5">
     <h1><span class="text-green">Nos clients témoignent</span></h1>
   </div>
   <div class="row justify-content-xs-center">
