--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -65,7 +65,7 @@
           <% end %>
         </div>
 
-          <% @user.documents.each do |doc| %>
+          <% @current_user.documents.each do |doc| %>
           <div class="eds right-el d-flex flex-column justify-content-center">
             <p class="m-0 p-1"><%= doc.name %></p>
             <%= cl_image_tag doc.file.key, width: 100 %>
