front des forms

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,7 +3,13 @@
   background-position: center;
   height: 250px;
   padding: 300px 0;
+
 }
+#form {
+  padding: 340px 0;
+}
+
+
 
 .banner h1 {
   margin: 0;
