--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -10,20 +10,20 @@
       <% end %>
     </ol>
     <div id="lightgallery" class="carousel-inner">
-      <div  class="carousel-item active" data-src= <%= cl_image_path(@rental.photos.first.key) %>>
+      <div  class="carousel-item active" data-src= <%= cl_image_path(@rental.photos.first.key) %> data-sub-html= "Balcon - Parfait état" >
         <%= cl_image_tag  @rental.photos.first.key, class:"d-block img-fluid", height: 250, crop: :fill %>
         <div class="carousel-caption d-none d-md-block">
-          <h5>Pièce n°1</h5>
+          <h5>Balcon</h5>
           <p>Parfait état</p>
         </div>
       </div>
       <% @rental.photos[1..-1].each_with_index do |photo, index| %>
-        <div class="carousel-item" data-src= <%= cl_image_path(photo.key) %> >
+        <div class="carousel-item" data-src= <%= cl_image_path(photo.key) %> data-sub-html= "Pièce n° <%= index + 1 %> - Parfait état" >
 
           <%= cl_image_tag  photo.key, class:"d-block img-fluid", height: 250, crop: :fill,'data-src': cl_image_path(photo.key) %>
 
           <div class="carousel-caption d-none d-md-block">
-            <h5>Pièce n° <%= index + 2 %></h5>
+            <h5>Pièce n° <%= index + 1 %></h5>
             <p>Parfait état</p>
           </div>
         </div>
