--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,11 +4,18 @@
 
   <!-- conteneur de la partie haute -->
   <div class="upper-part">
+
     <div class="upper-left">
 
       <div class="tab">
         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'appart')" >Mon Appartement</button>
         <button class="tablinks" onclick="openCity(event, 'edl')" >Etat des lieux</button>
+        <% if @documents.first %>
+          <button class="tablinks" onclick="openCity(event, 'Documents')" >Documents</button>
+        <% end %>
+        <% if @incidents.first %>
+         <button class=n"tablinks" onclick="openCity(event, 'Documents')" >Documents</button>
+        <% end %>
       </div>
 
       <div id="appart" class="product-container tabcontent bg-white">
@@ -34,6 +41,14 @@
       <div id="edl" class="product-container tabcontent carous2">
           <%= render 'carousel' %>
       </div>
+      <div id="documents" class="product-container tabcontent carous2">
+         <p>DOCUMENTS</p>
+      </div>
+
+      <div id="incidents" class="product-container tabcontent carous2">
+          <p>INCIDENTS</p>
+      </div>
+
     </div>
 
   <!-- Partie haute dashboard loyer  -->
