--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,9 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   margin-top: 20px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .footer-links {
