active sweet alert when click 'payer' + Create logic + AJAX

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -46,21 +46,15 @@
             <h1>Mes Loyers</h1>
           </div>
           <% @last_rents.each do |rent| %>
-            <div class="rent-line">
+            <div id="rent_<%= rent.id %>" class="rent-line">
               <div class="rent-date">
                 <%= rent.date.strftime('%B') %>
               </div>
               <div class="rent-amount">
-                <%= @rental.loyer %>
+                <%= @rental.loyer %> €
               </div>
               <div class="rent-status">
-                <% if rent.status == "Payé" %>
-                  <i class="fas fa-check-circle text-success"></i>
-                  <%= link_to "Quittance", rent_path(rent, format: :pdf), class: "btn btn-success", target: "_blank" %>
-                <% else %>
-                  <i class="fas fa-times-circle text-danger"></i>
-                  <%= link_to "Payer", "#", class: "btn btn-info" %>
-                <% end %>
+                <%= render 'rents/rent_status', rent: rent, rental: @rental %>
               </div>
             </div>
           <% end %>
