--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -12,7 +12,7 @@ $font-size-base: 1rem;
 // Colors
 $body-color: $gray;
 $primary:    $blue;
-$success:    $hover-green;
+$success:    $light-green;
 $info:       $yellow;
 $danger:     $red;
 $warning:    $orange;
