--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= simple_form_for @document do |f| %>
-    <%= f.input :name %>
-    <%= f.input :date %>
+    <%= f.input :name, placeholder: "Nom du document" %>
+    <%= f.input :date, placeholder: "Date" %>
     <%= f.input :file, as: :file %>
     <%= f.submit "Créer", class: "btn btn-primary" %>
   <% end %>
